--- a/scss/components/_info.scss
+++ b/scss/components/_info.scss
@@ -124,6 +124,8 @@ section {
 
         margin: 50px;
         text-align: justify;
+        font-family: 'Mukta Malar', sans-serif;
+        font-size: 20px;
 
     }
     
