--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,32 @@
 /*imports*/
 header h1 {
-  padding-top: 30px;
-  padding-left: 30px;
+  padding: 20px;
+  margin: 0 auto;
   height: 300px;
-  font-size: 120pt;
+  font-size: 132pt;
   border-bottom: #660000 solid;
   background-color: white;
+  text-align: center;
 }
 header h1 a {
   text-decoration: none;
   color: #660000;
   font-stretch: expanded;
   font-weight: 900;
+  font-family: "shrimp", sans-serif;
 }
 header h1 a:hover {
   color: rgb(243, 21, 21);
 }
 @media screen and (max-width: 810px) {
   header h1 {
-    font-size: 50pt;
+    font-size: 80pt;
+    text-align: left;
+  }
+}
+@media screen and (max-width: 415px) {
+  header h1 {
+    font-size: 60pt;
     text-align: left;
   }
 }
@@ -104,12 +112,47 @@ section .tiendawrapimagenes {
   font-weight: 600;
 }
 
-section .picturecoverindex {
-  margin-bottom: 20px;
+section .flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section #fondoindex {
+  width: 1340px;
+  height: 1000px;
+  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/a2c41194077739.5e8c608d2a6fd.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: brightness(1.5);
+}
+section #fondoindex h2 {
+  color: #660000;
+  font-size: 200px;
+  font-weight: 800;
+  font-family: "shrimp", sans-serif;
+}
+@media screen and (max-width: 810px) {
+  section #fondoindex h2 {
+    font-size: 40pt;
+  }
+}
+@media screen and (max-width: 810px) {
+  section #fondoindex {
+    width: 808px;
+    height: 500px;
+  }
+}
+@media screen and (max-width: 415px) {
+  section #fondoindex {
+    width: 410px;
+    height: 600px;
+  }
 }
 section div marquee {
-  font-size: 80pt;
+  font-size: 100pt;
   border-top: 2px #660000 solid;
+  font-family: "shrimp", sans-serif;
 }
 @media screen and (max-width: 810px) {
   section div marquee {
@@ -271,6 +314,7 @@ section .tiendawrapimagenes {
 
 .statement {
   padding: auto;
+  color: #660000;
 }
 .statement h2 {
   margin: 50px;
