--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,12 +1,67 @@
 @import '../base/extend';
 
+
+
+
+
 section {
 
-    .picturecoverindex {
+    .flex-center {
 
-        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
 
     }
+
+    #fondoindex {
+
+
+        width: 1340px;
+        height: 1000px;
+        background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/a2c41194077739.5e8c608d2a6fd.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        filter: brightness(1.5);
+
+
+        h2 {
+            color: #660000;
+            font-size: 200px;
+            font-weight: 800;
+            font-family: 'shrimp', sans-serif;
+
+
+            @media screen and (max-width: 810px) {
+
+                font-size: 40pt;
+            }
+        }
+
+
+        @media screen and (max-width: 810px) {
+
+            width: 808px;
+            height: 500px;
+        }
+
+        @media screen and (max-width: 415px) {
+
+            width: 410px;
+            height: 600px;
+        }
+
+
+
+
+
+
+    }
+
+
+
 
     .suscripcion {
 
@@ -20,8 +75,9 @@ section {
 
         marquee {
 
-            font-size: 80pt;
+            font-size: 100pt;
             border-top: 2px #660000 solid;
+            font-family: 'shrimp', sans-serif;
 
             @media screen and (max-width: 810px) {
 
