--- a/scss/components/_info.scss
+++ b/scss/components/_info.scss
@@ -81,6 +81,7 @@ section {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        
     }
 
     img {
@@ -95,7 +96,7 @@ section {
 
     }
 
-    
+
 
 
 
@@ -114,10 +115,11 @@ section {
 .statement {
 
     padding: auto;
+    color: #660000;
 
-    h2{
+    h2 {
         margin: 50px;
-        
+
     }
 
     p {
@@ -128,5 +130,5 @@ section {
         font-size: 20px;
 
     }
-    
+
 }
