--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -17,6 +17,7 @@
     flex-wrap: wrap;
     padding: 0 4px;
     margin-top: 100px;
+    
 }
 
 
@@ -28,6 +29,8 @@
 
 
     .content {
+
+        
         max-width: 650px;
         width: auto;
         margin: 0 auto;
@@ -36,7 +39,14 @@
         z-index: 2;
         margin-top: 100px;
         margin-bottom: 50px;
+
+        @media screen and (max-width: 560px) {
+
+            padding: 8px;
+
+        }
     }
+    
 
     h2 {
         color: #080808;
