--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -50,9 +50,15 @@ header {
 
     .navbar {
 
-        margin-top: 20px;
+        margin-top: 50px;
+        margin-bottom: 50px;
 
         div {
+
+            .navbar-brand {
+
+                font-size: 20pt;
+            }
 
             background-color: white;
 
