--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -28,16 +28,38 @@ section {
 
 
         h2 {
-            color: #660000;
+            color: #660000d0;
             font-size: 200px;
             font-weight: 800;
             font-family: 'shrimp', sans-serif;
 
 
+
+
             @media screen and (max-width: 810px) {
 
-                font-size: 40pt;
+                font-size: 60pt;
             }
+        }
+
+        .illus {
+            margin-bottom: 500px;
+
+            @media screen and (max-width: 810px) {
+
+                display: none;
+            }
+            
+        }
+
+        .tration {
+            margin-top: 500px;
+
+            @media screen and (max-width: 810px) {
+
+                display: none;
+            }
+            
         }
 
 
