--- a/scss/components/_info.scss
+++ b/scss/components/_info.scss
@@ -81,7 +81,7 @@ section {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        
+
     }
 
     img {
@@ -119,16 +119,49 @@ section {
 
     h2 {
         margin: 50px;
+        font-family: 'Durer';
 
     }
 
-    p {
 
-        margin: 50px;
+
+   
+
+    #statementtext {
+
+
+        
+
+
+        width: 100%;
+        margin: 0 auto;
+        padding: 50px;
         text-align: justify;
-        font-family: 'Mukta Malar', sans-serif;
+        font-family: 'Mukta Malar',
+        sans-serif;
         font-size: 20px;
 
+        div {
+            margin-bottom: 20px;
+        }
+
+
+        
     }
+
+
+    /*mobile responsive info*/
+
+    @media screen and (max-width: 560px) {
+
+        display: flex;
+        flex-direction: column;
+
+    }
+
+
+
+
+
 
 }
