--- a/scss/components/_tienda.scss
+++ b/scss/components/_tienda.scss
@@ -16,6 +16,8 @@ section {
 
    
 
+   
+
     ul {
 
         .storesubcontent {
@@ -26,7 +28,7 @@ section {
                 text-decoration: none;
                 color: black;
                 margin: 12px;
-                font-size: 25pt;
+                font-size: 20pt;
 
 
             }
@@ -59,6 +61,10 @@ section {
 
         border: 2px #660000 solid;
         margin-bottom: 20px;
+        font-family: 'Durer';
+        font-weight: bold;
+       
+       
     }
 
     .btn {
